(cram
 (applies_to *)
 (deps
  (package rukaml)
  ;(package rukaml_rv64)
  ; %{project_root}/compiler.exe
  %{project_root}/back_rv64/RV64_compiler.exe
  %{project_root}/back_rv64/rukaml_stdlib.o
  ;
  ))

;;;;; empty

(rule
 (targets empty.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src empty.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets empty.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src empty.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o empty.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    empty.o
    -o
    %{targets}))))

(cram
 (applies_to empty)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./empty.exe
  empty.ml
  empty.s))

;;;;; fac

(rule
 (targets fac.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fac.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fac.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac.o
    -o
    %{targets}))))

(cram
 (applies_to fac)
 (deps %{project_root}/back_rv64/rukaml_stdlib.o ./fac.exe fac.ml fac.s))

;;;;; ite0

(rule
 (targets ite0.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src ite0.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets ite0.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src ite0.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o ite0.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    ite0.o
    -o
    %{targets}))))

(cram
 (applies_to ite0)
 (deps %{project_root}/back_rv64/rukaml_stdlib.o ./ite0.exe ite0.ml ite0.s))

;;;;; fib

(rule
 (targets fib.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fib.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fib.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib.o
    -o
    %{targets}))))

(cram
 (applies_to fib)
 (deps %{project_root}/back_rv64/rukaml_stdlib.o ./fib.exe fib.ml fib.s))

;;;;; fib_acc

(rule
 (targets fib_acc.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fib_acc.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib_acc.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fib_acc.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_acc.o
    -o
    %{targets}))))

(cram
 (applies_to fib_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fib_acc.exe
  fib_acc.ml
  fib_acc.s))

;;;;; add

(rule
 (targets add.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src add.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets add.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src add.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o add.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    add.o
    -o
    %{targets}))))

(cram
 (applies_to add)
 (deps %{project_root}/back_rv64/rukaml_stdlib.o ./add.exe add.ml add.s))

;;;;; fac_acc

(rule
 (targets fac_acc.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac_acc.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fac_acc.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac_acc.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fac_acc.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_acc.o
    -o
    %{targets}))))

(cram
 (applies_to fac_acc)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fac_acc.exe
  fac_acc.ml
  fac_acc.s))

;;;;; fac_cps

(rule
 (targets fac_cps.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fac_cps.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fac_cps.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fac_cps.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fac_cps.o
    -o
    %{targets}))))

(cram
 (applies_to fac_cps)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fac_cps.exe
  fac_cps.ml
  fac_cps.s))

;;;;; long_app

(rule
 (targets long_app.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src long_app.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets long_app.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src long_app.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o long_app.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    long_app.o
    -o
    %{targets}))))

(cram
 (applies_to long_app)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./long_app.exe
  long_app.ml
  long_app.s))

;;;;; pass_print

(rule
 (targets pass_print.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src pass_print.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets pass_print.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src pass_print.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o pass_print.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print.o
    -o
    %{targets}))))

(cram
 (applies_to pass_print)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./pass_print.exe
  pass_print.ml
  pass_print.s))

;;;;; pass_print2

(rule
 (targets pass_print2.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src pass_print2.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets pass_print2.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src pass_print2.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o pass_print2.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    pass_print2.o
    -o
    %{targets}))))

(cram
 (applies_to pass_print2)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./pass_print2.exe
  pass_print2.ml
  pass_print2.s))

;;;;; anon1

(rule
 (targets anon1.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src anon1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets anon1.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src anon1.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o anon1.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    anon1.o
    -o
    %{targets}))))

(cram
 (applies_to anon1)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./anon1.exe
  anon1.ml
  anon1.s))

;;;;; order1

(rule
 (targets order1.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src order1.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets order1.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src order1.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o order1.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    order1.o
    -o
    %{targets}))))

(cram
 (applies_to order1)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./order1.exe
  order1.ml
  order1.s))

;;;;; nikita2

(rule
 (targets nikita2.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src nikita2.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets nikita2.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src nikita2.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o nikita2.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita2.o
    -o
    %{targets}))))

(cram
 (applies_to nikita2)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./nikita2.exe
  nikita2.ml
  nikita2.s))

;;;;; nikita3

(rule
 (targets nikita3.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src nikita3.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets nikita3.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src nikita3.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o nikita3.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    nikita3.o
    -o
    %{targets}))))

(cram
 (applies_to nikita3)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./nikita3.exe
  nikita3.ml
  nikita3.s))

;;;;; fib_cps

(rule
 (targets fib_cps.s)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib_cps.ml))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    %{project_root}/back_rv64/RV64_compiler.exe
    -o
    %{targets}
    --no-start
    %{src}))))

(rule
 (targets fib_cps.exe)
 (deps
  %{project_root}/back_rv64/RV64_compiler.exe
  (:src fib_cps.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc-13 -g -c %{src} -o fib_cps.o)
   (run
    riscv64-linux-gnu-gcc-13
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_cps.o
    -o
    %{targets}))))

(cram
 (applies_to fib_cps)
 (deps
  %{project_root}/back_rv64/rukaml_stdlib.o
  ./fib_cps.exe
  fib_cps.ml
  fib_cps.s))
