(rule
 (targets 002hello.exe)
 (deps
  (:src helloworld.s))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-as -march=rv64imac %{src} -o hello.o)
   (run riscv64-linux-gnu-ld hello.o -o %{targets}))))

(cram
 (applies_to 001)
 (deps 002hello.exe))

(rule
 (targets fac.exe)
 (deps
  (:src fac.s)
  (:runtime demo_runtime.c))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc -march=rv64gc %{runtime} -c -o runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc %{src} -o fac.o)
   (run riscv64-linux-gnu-gcc runtime.o fac.o -o %{targets}))))

(cram
 (applies_to 001)
 (deps fac.exe))

(rule
 (targets bm1.exe)
 (deps
  (:src bm1.s)
  (:runtime demo_runtime.c))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc -march=rv64gc_zbb %{runtime} -c -o runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc_zbb %{src} -o main.o)
   (run
    riscv64-linux-gnu-gcc
    -march=rv64gc_zbb
    runtime.o
    main.o
    -o
    %{targets}))))

(cram
 (applies_to 002bm)
 (deps bm1.exe))

(rule
 (targets strcpy.exe)
 (deps
  (:src strcpy.s)
  (:runtime demo_runtime.c))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv64gc_zve64x
    %{runtime}
    -c
    -o
    runtime.o)
   (run riscv64-linux-gnu-as -march=rv64gc_zve64x %{src} -o strcpy.o)
   (run
    riscv64-linux-gnu-gcc
    -march=rv64gc_zve64x
    runtime.o
    strcpy.o
    -o
    %{targets}))))

(cram
 (applies_to 003v)
 (deps strcpy.exe))

; fib_acc 

(rule
 (targets fib_acc.exe)
 (deps
  (:src fib_acc.s)
  %{project_root}/back_rv64/rukaml_stdlib.o)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-gcc -fPIC -g -c %{src} -o fib_acc.o)
   (run
    riscv64-linux-gnu-gcc
    -fPIC
    -g
    %{project_root}/back_rv64/rukaml_stdlib.o
    fib_acc.o
    -o
    %{targets}))))

(cram
 (applies_to fib_acc)
 (deps
  ;%{project_root}/back_rv64/rukaml_stdlib.o
  fib_acc.exe
  ;
  ))
