;;;;; add

(rule
 (target add.exe)
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (mode
  (promote (until-clean)))
 (deps
  (:src add.s)
  (:stdlib ../rukaml_stdlib.o))
 (action
  (system "%{read:../../../cc_rv64} %{deps} -o %{target}")))

(cram
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (applies_to add)
 (deps ../rukaml_stdlib.o ./add.exe add.s))

;;;;; fib2

(rule
 (target fib2.exe)
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (mode
  (promote (until-clean)))
 (deps
  (:src fib2.s)
  (:stdlib ../rukaml_stdlib.o))
 (action
  (system "%{read:../../../cc_rv64} %{deps} -o %{target}")))

(cram
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (applies_to fib2)
 (deps ../rukaml_stdlib.o ./fib2.exe fib2.s))

;;;;; fac_cps

(rule
 (target fac_cps.exe)
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (mode
  (promote (until-clean)))
 (deps
  (:src fac_cps.s)
  (:stdlib ../rukaml_stdlib.o))
 (action
  (system "%{read:../../../cc_rv64} %{deps} -o %{target}")))

(cram
 (enabled_if
  (not
   (= none %{read:../../../cc_rv64})))
 (applies_to fac_cps)
 (deps ../rukaml_stdlib.o ./fac_cps.exe fac_cps.s))
