(cram
 (enabled_if
  (= %{env:DISABLE_CAA_TESTS=true} "false"))
 (deps
  (package rukaml)
  (package MiniML_rv64)
  ../bench/fib0.ml
  ../bench/fibk5.ml
  ../bench/fibst5.ml
  ../bench/fack5.ml
  %{project_root}/compiler.exe
  %{project_root}/back_rv64/RV64_compiler.exe
  %{project_root}/back_rv64/rukaml_stdlib.o
  ;
  ))
